--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-
-    <p id="time">Här ska det stå tid</p>
+    <h2 id="weekday">Veckodag</h2>
+    <h2 id="time">Här ska det stå tid</h2>
     
 </body>
 </html>
