--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <h2 id="month">Månad</h2>
     <h2 id="weekday">Veckodag</h2>
     <h2 id="time">Här ska det stå tid</h2>
     
